2008-04-04 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSScrollView.m: Correct indentation. Small cleanups.
	* Source/NSScrollView.m (-setDrawsBackground:): Set setCopiesOnScroll:.
	
2008-04-02  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Source/NSSplitView.m ([-adjustSubviews]): Fixed the slow drift
	of the divider when the window is resized multiple times, due to a
	historical 'floor' call, now pointless.

2008-04-01  Nicola Pero  <nicola.pero@meta-innovation.com>

	Implemented -setAutosaveName: for NSSplitView.
	* Headers/AppKit/NSSplitView.h ([-setAutosaveName:],
	[autosaveName]): New methods.  New instance variable
	_autosaveName.
	* Source/NSSplitView.m ([-_autosaveSubviewProportions]): New
	method.  ([-mouseDown:]): Invoke _autosaveSubviewProportions at
	the end of the tracking. ([-adjustSubviews]): Rewritten to support
	loading autosaved subview proportions as well as proportionally
	resizing current ones.  ([-autosaveName], [-setAutosaveName:]):
	New methods.  ([-dealloc]): Release the new
	ivar.  ([-encodeWithCoder:]): Encode autosaveName using
	NSAutosaveName key.  ([-initWithCoder:]): If the NSAutosaveName
	key is set, decode it.
	
2008-04-01  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Source/NSSplitView.m ([-adjustSubviews]): Removed unused
	variable and a few unnecessary method calls.

2008-03-31 Xavier Glattard <xavier.glattard@online.fr>

	* Source/NSOpenGLView.m: Use _lockFocusInContext:withRect instead of
	canDraw. Some changes to be closer to the specifications.

2008-03-31 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSOpenGLView.h: Add MacOS 10.3 method.
	* Source/NSOpenGLView.m: Clean up. Use canDraw instead of
	lockFocusInRect: as the entry point for context attachment.

2008-03-29 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSApplication.m (-terminate:): Initialize termination as
	NSTerminateNow. 

2008-03-28 Xavier Glattard <xavier.glattard@online.fr>

	* Source/NSKeyValueBinding.m : turns a [setValue:forKey:] into